feat : front 기능구현 및 테스트진행