@@ -1,11 +1,9 @@
 package com.bizsync.backend.batch.job;
 
-import com.bizsync.backend.domain.project.entity.Project;
-import com.bizsync.backend.domain.project.entity.ProjectStatus;
-import com.bizsync.backend.domain.project.repository.ProjectRepository;
-import com.bizsync.backend.global.common.aop.PerformanceLogging;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+import java.time.LocalDate;
+import java.util.Map;
+import java.util.concurrent.Executors;
+
 import org.springframework.batch.core.Job;
 import org.springframework.batch.core.Step;
 import org.springframework.batch.core.job.builder.JobBuilder;
@@ -22,24 +20,31 @@ import org.springframework.core.task.support.TaskExecutorAdapter;
 import org.springframework.data.domain.Sort;
 import org.springframework.transaction.PlatformTransactionManager;
 
-import java.time.LocalDate;
-import java.util.Map;
-import java.util.concurrent.Executors;
+import com.bizsync.backend.domain.project.entity.Project;
+import com.bizsync.backend.domain.project.entity.ProjectStatus;
+import com.bizsync.backend.domain.project.repository.ProjectRepository;
+import com.bizsync.backend.global.common.aop.PerformanceLogging;
+
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * 프로젝트 아카이빙 배치 Job 설정
  *
- * <p>종료일이 지난 지 30일 이상 경과한 완료 프로젝트를 아카이빙합니다.
+ * <p>
+ * 종료일이 지난 지 30일 이상 경과한 완료 프로젝트를 아카이빙합니다.
  * 상태 변경: COMPLETED → ARCHIVED
  *
- * <p>실행 스케줄: 매일 오전 2시 (Cron: 0 0 2 * * ?)
+ * <p>
+ * 실행 스케줄: 매일 오전 2시 (Cron: 0 0 2 * * ?)
  *
- * <p>처리 전략:
+ * <p>
+ * 처리 전략:
  * <ul>
- *   <li>청크 크기: 100건</li>
- *   <li>리더(Reader): COMPLETED 이면서 종료일이 30일 이전인 프로젝트 조회</li>
- *   <li>프로세서(Processor): 아카이빙 가능 여부 검증(필요 시 확장)</li>
- *   <li>라이터(Writer): ARCHIVED로 상태 변경 후 저장</li>
+ * <li>청크 크기: 100건</li>
+ * <li>리더(Reader): COMPLETED 이면서 종료일이 30일 이전인 프로젝트 조회</li>
+ * <li>프로세서(Processor): 아카이빙 가능 여부 검증(필요 시 확장)</li>
+ * <li>라이터(Writer): ARCHIVED로 상태 변경 후 저장</li>
  * </ul>
  *
  * @author BizSync Team
@@ -51,24 +56,25 @@ public class ProjectArchiveJobConfig {
 
     private static final int CHUNK_SIZE = 100;
     private static final int ARCHIVE_DAYS_THRESHOLD = 30;
-    private static final int VIRTUAL_THREAD_CONCURRENCY = 10;
+    /** Step 병렬 처리 동시성 수준 (TaskExecutor 풀 크기로 제한) */
+    private static final int STEP_CONCURRENCY = 10;
     private final JobRepository jobRepository;
     private final PlatformTransactionManager transactionManager;
     private final ProjectRepository projectRepository;
 
     /**
-     * 병렬 처리를 위한 Virtual Thread 기반 TaskExecutor
+     * 병렬 처리를 위한 Step 전용 TaskExecutor (동시성 제한)
      *
-     * <p>Java 21의 Virtual Thread로 가벼운 동시성을 제공합니다.
-     * (참고) 플랫폼 스레드 대비 메모리 사용량이 적어 대량 동시 작업에 유리합니다.
+     * <p>
+     * Spring Batch 5에서 deprecated된 throttleLimit 대신,
+     * 풀 크기가 제한된 TaskExecutor로 동시성을 제어합니다.
      *
-     * @return Virtual Thread 기반 TaskExecutor
+     * @return 고정 크기 스레드 풀 기반 TaskExecutor
      */
     @Bean
-    public TaskExecutor virtualThreadTaskExecutor() {
+    public TaskExecutor projectArchiveTaskExecutor() {
         return new TaskExecutorAdapter(
-                Executors.newVirtualThreadPerTaskExecutor()
-        );
+                Executors.newFixedThreadPool(STEP_CONCURRENCY));
     }
 
     /**
@@ -82,10 +88,10 @@ public class ProjectArchiveJobConfig {
     }
 
     /**
-     * 프로젝트 아카이빙 Step (Virtual Thread 사용)
+     * 프로젝트 아카이빙 Step (병렬 처리)
      *
-     * <p>Virtual Thread로 병렬 처리합니다.
-     * 동시성 수준: 10 (설정값으로 조정 가능)
+     * <p>
+     * TaskExecutor 풀 크기(STEP_CONCURRENCY)로 동시성 수준을 제한합니다.
      */
     @Bean
     public Step projectArchiveStep() {
@@ -94,15 +100,15 @@ public class ProjectArchiveJobConfig {
                 .reader(projectArchiveReader())
                 .processor(projectArchiveProcessor())
                 .writer(projectArchiveWriter())
-                .taskExecutor(virtualThreadTaskExecutor())
-                .throttleLimit(VIRTUAL_THREAD_CONCURRENCY)
+                .taskExecutor(projectArchiveTaskExecutor())
                 .build();
     }
 
     /**
      * Reader: 아카이빙 대상 프로젝트 조회
      *
-     * <p>조건: COMPLETED 상태 + 종료일이 30일(이상) 이전
+     * <p>
+     * 조건: COMPLETED 상태 + 종료일이 30일(이상) 이전
      */
     @Bean
     public RepositoryItemReader<Project> projectArchiveReader() {
@@ -121,7 +127,8 @@ public class ProjectArchiveJobConfig {
     /**
      * Processor: 아카이빙 대상 검증
      *
-     * <p>현재는 그대로 통과(pass-through)하지만,
+     * <p>
+     * 현재는 그대로 통과(pass-through)하지만,
      * 필요 시 검증 로직을 추가할 수 있습니다.
      * (예: 연관 결재 문서 확인, 레퍼런스 정리 등)
      */
@@ -130,7 +137,7 @@ public class ProjectArchiveJobConfig {
         return project -> {
             log.debug("Processing project for archive: {} (ID: {})",
                     project.getName(), project.getProjectId());
-            return project;  // Pass through
+            return project; // Pass through
         };
     }
 
